static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Arimo');

body {
  color: #0B0E5B;
}

form {
  margin-top: 10px;
}

/************************************ Font */

h1 {
  font-size: 1.5rem;
}

h2 {
  font-size: 1.1rem;
}

h1, h2, li {
  font-family: Merriweather;
}

p, label {
  font-family: Arimo;
  text-align: center;
}

#logo-text {
  font-size: 1.6rem;
}

h1 span {
  background-color: rgba(255, 255, 255, 0.8);
  padding: 5px;
}

/************************************ Buttons */

button {
  background-color: white;
  border: none;
  color: none;
  text-align: center;
  text-decoration: none;
}

#add-button, #edit-button, #delete-button, #plant-submit-button, #login-submit-button {
  height: 5vh;
	width: auto;
  background-color: white;
  border: none;
  color: none;
  text-align: center;
  text-decoration: none;
}

.overlay-button {
  background-color: #0B0E5B;
  border-style: solid;
  border-width: 5px;
  border-color: #0B0E5B;
  margin: 10px;
  border-radius: 25px;
  color: white;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
}

.login-button {
  display:flex;
  align-items:center;
}

#login-button {
  background-color: #0B0E5B;
  border-style: solid;
  border-width: 5px;
  border-color: #0B0E5B;
  margin: 50px;
  border-radius: 25px;
  color: white;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
}

#new-user, #forgot-password {
  cursor: pointer;
}

/************************************ Links */

li {
  display: inline-block;
}

a:link { 
  text-decoration: none; 
  display:flex;
  align-items:center;
  width:100%;
  font-size: 1.1rem;
}

/************************************ Nav bar */

.nav {  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  gap: 0px 0px;
  grid-auto-flow: row;
  grid-template-areas:
    "nav-ul";
  grid-area: nav;
  margin: 10px;
}

.nav-ul {  display: grid;
  grid-template-columns: 7fr 1fr 1fr;
  grid-template-rows: 1fr;
  gap: 0px 0px;
  grid-auto-flow: row;
  grid-template-areas:
    "logo my-plants login";
  grid-area: nav-ul;
}

.logo { grid-area: logo; }

.my-plants { grid-area: my-plants; }

.login { 
  grid-area: login; 
}

/************************************ Images */

#logo {
  height: 5vh;
	width: auto;
  margin-right: 10px;
}

.three-plants {
  background-image: url("../images/pots.webp");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: bottom right;
  height: 30vh;
  width: auto;
}

.user-image, #default-image {
  height: 25vh;
  width: auto;
}

/************************************ Base CSS */

.container {  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 7fr;
  gap: 10px 10px;
  grid-auto-flow: row;
  grid-template-areas:
    "nav nav"
    "page page";
}

.page {  
  display: grid;
  grid-template-columns: 1fr 3fr;
  grid-template-rows: 1fr;
  gap: 10px 10px;
  grid-auto-flow: row;
  grid-template-areas:
    "left-col right-col";
  grid-area: page;
}

/************************************ Left Column */

.left-col {  
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 2fr;
  gap: 10px 10px;
  grid-auto-flow: row;
  grid-template-areas:
    "title"
    "instructions";
  grid-area: left-col;
  margin: 40px;
  justify-items: center;
  text-align: center;
}

.title { 
  grid-area: title; 
  background-image: url("../images/grass.webp");
  background-size: cover;
  background-repeat: no-repeat;
  padding: 40px;
  display:flex;
  justify-content:center;
  align-items:flex-end;
}

.instructions { 
  grid-area: instructions; 
}

/************************************ Right Column */

.right-col { 
  grid-area: right-col; 
  justify-items: center;
  text-align: center;
}

.add-plant {
  border-style: solid;
  border-width: 5px;
  border-color: #0B0E5B;
  margin: 50px;
  border-radius: 25px;
}

/************************************ Form Plant Divs */

.plant-divs {  
  display: grid;
  grid-template-columns: 5fr 5fr 9fr 1fr 1fr;
  grid-template-rows: 1fr;
  gap: 0px 0px;
  grid-auto-flow: row;
  grid-template-areas:
    "plant-image-section plant-name main-info edit delete";
  border-style: solid;
  border-width: 5px;
  border-color: #0B0E5B;
  border-radius: 25px;
  margin: 50px;
  align-items: center;
  justify-items: center;
}

.plant-image-section { 
  grid-area: plant-image-section; 
}

.plant-image {
  height: 25vh;
  width: auto;
  border-radius: 25px;
}

.plant-name {  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 1fr;
  gap: 10px 10px;
  grid-auto-flow: row;
  grid-template-areas:
    "common-name"
    "latin-name";
  grid-area: plant-name;
  margin: 10px;
}

.common-name { grid-area: common-name; }

.latin-name { grid-area: latin-name; }

.main-info {  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 1fr;
  gap: 10px 10px;
  grid-auto-flow: row;
  grid-template-areas:
    "water-interval"
    "last-watered";
  grid-area: main-info;
  align-items: center;
  justify-items: center;
  margin: 10px;
}

.water-interval { 
  grid-area: water-interval; 
}

.last-watered { 
  grid-area: last-watered; 
}

.next-water { 
  grid-area: next-water; 
}

.edit { 
  grid-area: edit; 
}

.delete {
  display: grid; 
  grid-template-columns: 1fr; 
  grid-template-rows: 1fr 1fr; 
  gap: 0px 0px; 
  grid-template-areas: 
    "."
    "submit"; 
  grid-area: delete; 
}

.submit { 
  grid-area: submit; 
}

/****************************** User Plant Divs */

.user-plant-divs {  
  display: grid;
  grid-template-columns: 5fr 5fr 9fr 1fr 1fr;
  grid-template-rows: 1fr;
  gap: 0px 0px;
  grid-auto-flow: row;
  grid-template-areas:
    "user-plant-image user-plant-name user-main-info user-edit user-delete";
  border-style: solid;
  border-width: 5px;
  border-color: #0B0E5B;
  border-radius: 25px;
  margin: 50px;
  align-items: center;
  justify-items: center;
}

.user-plant-image { 
  grid-area: user-plant-image; 
}

.user-plant-name {  
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 1fr;
  gap: 0px 0px;
  grid-auto-flow: row;
  grid-template-areas:
    "user-common-name"
    "user-latin-name";
  grid-area: user-plant-name;
}

.user-common-name { 
  grid-area: user-common-name; 
}

.user-latin-name { 
  grid-area: user-latin-name; 
}

.user-main-info {  
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  gap: 0px 0px;
  grid-auto-flow: row;
  grid-template-areas:
    "user-water-interval"
    "user-last-watered"
    "user-next-water";
  grid-area: user-main-info;
}

.user-water-interval { 
  grid-area: user-water-interval; 
}

.user-last-watered { 
  grid-area: user-last-watered; 
}

.user-next-water { 
  grid-area: user-next-water; 
}

.user-edit { 
  grid-area: user-edit; 
}

.user-delete { 
  grid-area: user-delete; }


/****************************** Overlays and hidden */

.overlay {
	display: none; 
	width: 30%; 
	height: auto; 
	max-height: 98vh;
	background-color: white; 
	z-index: 3; 
	border: 4px solid #0B0E5B;
  border-radius: 25px;
	position: fixed;
  top:50%;
  left:50%;
  transform:translate(-50%, -50%);
  padding: 10px;
}

input {
  padding: 5px;
}

.hidden {
  display: none;
}

.toggle {
  display: none;
}

/* Code adapted from Rich Bradshaw's code at https://stackoverflow.com/questions/5995252/how-to-dim-your-webpage-to-center-your-attention-on-a-banner-dim-bright-effect */
#dim {
  position: fixed;
  top:0;
  left:0;
  width:100%;
  height:100%;
  background: rgba(0, 0, 0, 0.5);
  z-index: 2;
}

/****************************** Login Page */

.login-div {  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 2fr;
  gap: 0px 0px;
  grid-auto-flow: row;
  grid-template-areas:
    "login-section"
    "three-plants";
  height: 80vh;
}

.login-section {  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-template-rows: 1fr;
  gap: 0px 0px;
  grid-auto-flow: row;
  grid-template-areas:
    "login-form login-button";
  grid-area: login-section;
}

.login-form {  display: grid;
  grid-template-columns: 1fr 5fr;
  grid-template-rows: 1fr 1fr;
  gap: 0px 0px;
  grid-auto-flow: row;
  grid-template-areas:
    "email-text email-box"
    "password-text password-box";
  grid-area: login-form;
}

.login-form, .email-box, .password-box {
  border-style: solid;
  border-width: 5px;
  border-color: #0B0E5B;
  border-radius: 25px;
}

.email-box, .password-box {
  margin: 50px;
}

.email-text { 
  grid-area: email-text;
  display:flex;
  justify-content:center;
  align-items:center;
}

.email-box { 
  grid-area: email-box; 
  padding: 10px;
  
}

.password-text { 
  grid-area: password-text;
  display:flex;
  justify-content:center;
  align-items:center;
}

.password-box { 
  grid-area: password-box; 
  padding: 10px;
}

.login-button { grid-area: login-button; }

.three-plants {  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 3fr;
  gap: 0px 0px;
  grid-auto-flow: row;
  grid-template-areas:
    "new-user"
    ".";
  grid-area: three-plants;
}

.new-user { grid-area: new-user; }

